add service summary and get yaml and 404 401
